--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Inline SVG "M" (cache-proof, instant load) -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 120 120'%3E%3Ccircle cx='60' cy='60' r='60' fill='%231e3c72'/%3E%3Ctext x='60' y='72' font-family='system-ui,-apple-system,Segoe UI,Roboto,sans-serif' font-size='80' font-weight='900' fill='white' text-anchor='middle' dominant-baseline='middle' letter-spacing='-0.05em'%3EM%3C/text%3E%3C/svg%3E">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 120 120'%3E%3Ccircle cx='60' cy='60' r='60' fill='%231e3c72'/%3E%3Ctext x='60' y='72' font-family='system-ui,-apple-system,Segoe UI,Roboto,sans-serif' font-size='80' font-weight='900' fill='white' text-anchor='middle' dominant-baseline='middle' letter-spacing='-0.05em'%3EM%3C/text%3E%3C/svg%3E">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1d3557" />
     
