--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mukilan.dev/" />
+    <meta property="og:url" content="https://mukilanpalanichamy.vercel.app/" />
     <meta property="og:title" content="Mukilan | Frontend Developer Portfolio" />
     <meta property="og:description" content="Frontend-focused Software Engineer specializing in scalable React systems and complex business logic." />
     <meta property="og:image" content="/assets/profile.jpeg" />
@@ -31,7 +31,7 @@
     <meta property="twitter:description" content="Frontend-focused Software Engineer specializing in scalable React systems and complex business logic." />
     <meta property="twitter:image" content="/assets/profile.jpeg" />
 
-    <link rel="canonical" href="https://mukilan.dev/" />
+    <link rel="canonical" href="https://mukilanpalanichamy.vercel.app/" />
   </head>
   <body>
     <div id="root"></div>
