Enached the SEO and fixed bugs

--- a/index.html
+++ b/index.html
@@ -12,26 +12,52 @@
     <link rel="preload" href="/assets/profile.jpeg" as="image" />
 
     <!-- SEO Meta Tags -->
-    <title>Mukilan | Frontend Developer & Software Engineer Portfolio</title>
-    <meta name="description" content="Mukilan is a Frontend-focused Software Engineer specializing in scalable React/Next.js systems and complex business logic. View projects, experience at Tata 1mg, and technical skills." />
-    <meta name="keywords" content="Mukilan, Frontend Developer, Software Engineer, React Developer, Tata 1mg, JavaScript, TypeScript, Portfolio" />
-    <meta name="author" content="Mukilan" />
+    <title>Mukilan Palanichamy | Software Engineer | Frontend Developer Portfolio</title>
+    <meta name="description" content="Mukilan Palanichamy - Software Engineer & Frontend Developer with experience at Tata 1mg. Specializing in React, TypeScript, scalable systems. View portfolio, projects, skills." />
+    <meta name="keywords" content="Mukilan Palanichamy, Mukilan, Mukilan P, software engineer, frontend developer, frontend engineer, software engineer portfolio, frontend developer portfolio, React developer, Tata 1mg, JavaScript, TypeScript, Mukilan Palanichamy portfolio" />
+    <meta name="author" content="Mukilan Palanichamy" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mukilanpalanichamy.vercel.app/" />
-    <meta property="og:title" content="Mukilan | Frontend Developer Portfolio" />
-    <meta property="og:description" content="Frontend-focused Software Engineer specializing in scalable React systems and complex business logic." />
+    <meta property="og:title" content="Mukilan Palanichamy | Frontend Developer & Software Engineer Portfolio" />
+    <meta property="og:description" content="Mukilan Palanichamy - Frontend-focused Software Engineer specializing in scalable React/Next.js systems and complex business logic. Portfolio." />
     <meta property="og:image" content="/assets/profile.jpeg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="Mukilan | Frontend Developer Portfolio" />
-    <meta property="twitter:description" content="Frontend-focused Software Engineer specializing in scalable React systems and complex business logic." />
+    <meta property="twitter:title" content="Mukilan Palanichamy | Frontend Developer & Software Engineer Portfolio" />
+    <meta property="twitter:description" content="Mukilan Palanichamy - Frontend-focused Software Engineer specializing in scalable React/Next.js systems and complex business logic. Portfolio." />
     <meta property="twitter:image" content="/assets/profile.jpeg" />
 
     <link rel="canonical" href="https://mukilanpalanichamy.vercel.app/" />
+
+    <!-- Schema.org Structured Data for Person -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Mukilan Palanichamy",
+      "jobTitle": "Frontend Developer & Software Engineer",
+      "url": "https://mukilanpalanichamy.vercel.app/",
+      "image": "https://mukilanpalanichamy.vercel.app/assets/profile.jpeg",
+      "sameAs": [
+        "https://www.linkedin.com/in/mukilan-p-/",
+        "https://github.com/MUKILAN019"
+      ],
+      "knowsAbout": ["React", "TypeScript", "Next.js", "JavaScript", "Software Engineering", "Frontend Development"],
+      "description": "Frontend-focused Software Engineer specializing in scalable React/Next.js systems and complex business logic. Experience at Tata 1mg.",
+      "mainEntityOfPage": {
+        "@type": "ProfilePage",
+        "@id": "https://mukilanpalanichamy.vercel.app/"
+      },
+      "affiliation": {
+        "@type": "Organization",
+        "name": "Tata 1mg"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
